[tool.poetry]
name = "modern-ts-forecasting-py"
version = "0.1.0"
description = "Modern Time Series forecasting with python"
authors = ["Arun Khattri <arunkhattri@outlook.com>"]
license = "GPL_v3_or_later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
isort = "^5.13.2"
nose = "^1.3.7"
flake8 = "^7.1.1"
mypy = "^1.13.0"
ipython = "^8.29.0"
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
